correcting header overlap issue

--- a/css/base.css
+++ b/css/base.css
@@ -132,6 +132,7 @@ section {
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
+  /*padding-top: 40px;*/
 }
 
 form{
@@ -178,7 +179,7 @@ input {
 footer {
   width: 100%;
   height: 100%;
-  padding: 50px 30px !important;
+  padding: 80px 30px 50px 30px !important;
   background-color: #333333;
 }
 
